# zxing-wasm

./: .clang-format  .coderabbit.yaml  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.json  .ncurc.cjs  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  README.md  biome.json  bundlewatch.config.json  copy-files-from-to.json  emscripten.patch  fetch-artifacts.sh  index.html  main.ts  main.tsx  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  replace-output.js  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.production.json  typedoc.json  vite.base.ts  vite.config.js  vite.config.ts  vitest.browser.config.ts  zxing-wasm-1.0.0-rc.0.tgz  zxing-wasm-monorepo.code-workspace
.ccache/0/: stats
.ccache/0/0/: 24k3aaev09rts1eb623gi7iubsucup0M
.ccache/0/1/: 38ogp3d3gub42r7lgocfhnutej00cl6R
.ccache/0/2/: 22b1d8g6ng6dpe6916vhegum179uhhsR  380u7d07v0kgf713sd9sbdh8abbbi4qR  78ld0oj3fuoij6manf2h6prr82n0v90R  8eup50kq3sgmm153e7hv6aor845u1mqM  9c2mas6iijp0vmkmptre90jii9a7c90R
.ccache/0/4/: 54ouucpfhd6amtm0ii258gq1o23bmaiR  77h3bev3u2nqakmpgpem6ic06isdh3sR  94u3atm38lqehuj7v65r5o5p3q0mun4R
.ccache/0/5/: 61iqujbsbul936li1bugt7epndhiv2uR  e52v2b17ofpduqorjqi2cm772df2368M  f9feef74bc54rql8refni9a2p6jqf1uR  stats
.ccache/0/7/: 7e63i95dcbpj7umsfg4tidvqu6v0f8cM
.ccache/0/9/: 5df197361jaat50trci4tlm64eg77poM
.ccache/0/a/: 979ls0feksqdafb1ap6u74msfebe148M
.ccache/0/b/: 22de0jm3gjfvbmhqbem67is4cl3i4t8M
.ccache/0/c/: 12str852omhlvkbpu8vtqb593rn6720M  83acrocns3i9idngpgjbcu4noscbbhsM
.ccache/0/d/: 26dc73p7s5vvk42737ircf341baaf4mR
.ccache/0/e/: 2649revludoaf79t1jkngke2rom3uhuM
.ccache/1/: stats
.ccache/1/0/: c3sul3hhl3dmf1l2a6i0rid8iel4nsaR
.ccache/1/2/: bd67lu23s1kebkr1pp35daej27jpp4oM
.ccache/2/: stats
.ccache/2/a/: stats
.ccache/3/: stats
.ccache/4/: stats
.ccache/5/: stats
.ccache/6/: stats
.ccache/7/: stats
.ccache/8/: stats
.ccache/9/: stats
.ccache/a/: stats
.ccache/b/: stats
.ccache/c/: stats
.ccache/d/: stats
.ccache/e/: stats
.ccache/f/: stats
.changeset/: better-paths-stay.md  bitter-paths-stand.md  brave-cloths-speak.md  breezy-pianos-bake.md  bright-pens-glow.md  bright-walls-dance.md  bump-zxing-cpp-and-deps.md  cold-scissors-tickle.md  config.json  curly-chefs-retire.md  curly-houses-bathe.md  dark-steaks-live.md  dry-berries-applaud.md  every-deer-end.md  fair-carrots-serve.md  fair-squids-knock.md  few-oranges-live.md  four-keys-occur.md  friendly-walls-push.md  funny-kiwis-pay.md  grumpy-icons-crash.md  grumpy-impalas-learn.md  healthy-mugs-dress.md  large-pots-search.md  lazy-gifts-vanish.md  lovely-meals-open.md  lucky-bats-attend.md  lucky-fishes-draw.md  micro-pdf417-telepen.md  nasty-worlds-dream.md  nervous-turkeys-brake.md  nice-needles-guess.md  pink-tips-unite.md  plenty-files-thank.md  popular-dryers-hear.md  pre.json  pretty-ravens-send.md  rare-apricots-exercise.md  selfish-socks-visit.md  sharp-shrimps-enjoy.md  (+10 more)
.github/: dependabot.yml
.github/workflows/: bencher.yml  ci.yml  codspeed.yml  comment-pr.yml  comment.yml  delete-ci-release.yml  delete-pr-prereleases.yml  dependabot-auto-merge.yml  deploy.yml  prerelease.yml  preview-release.yml  release.yml  size.yml  test.yml
demo/: index.html  tsconfig.json  vite.config.ts
demo/src/: App.tsx  main.ts  main.tsx
public/full/: zxing_full.wasm
public/reader/: zxing_reader.wasm
public/writer/: zxing_writer.wasm
scripts/: babel-plugin-emscripten-patch.ts  babel-plugin-miniprogram-patch.ts  build-cjs.ts  build-iife.ts  build-miniprogram.ts  patch-emscripten.sh  prepare.sh  sync-emsdk.sh  vite-plugin-emscripten-bun.ts  vite-plugin-emscripten-patch.ts  vitest-bench-to-bmf.mjs
src/: ZXing.ts  core.ts  exposed.ts  global.d.ts  imageData.d.ts  index.css.ts  index.ts  readerExposedBindings.ts  share.ts  vite-env.d.ts  writerExposedBindings.ts
src/bindings/: barcodeFormat.ts  barcodeSymbol.ts  binarizer.ts  characterSet.ts  contentType.ts  decodeHints.ts  eanAddOnSymbol.ts  ecLevel.ts  eccLevel.ts  encodeHints.ts  enum.ts  exposedReaderBindings.ts  exposedWriterBindings.ts  index.ts  position.ts  readResult.ts  readerOptions.ts  textMode.ts  writeResult.ts  writerOptions.ts
src/cpp/: .clang-format  BarcodeReader.cpp  BarcodeWriter.cpp  CMakeLists.txt  LICENSE  ZXingWasm.cpp
src/full/: index.ts  zxing_full.d.ts  zxing_full.js  zxing_full.wasm
src/react/: DESIGN.md  helpers.ts  index.ts  scanLoop.ts  scanner-worker.ts  useScanner.ts  workerDecode.ts
src/reader/: index.ts  zxing_reader.d.ts  zxing_reader.js  zxing_reader.wasm
src/scanner/: DESIGN.md  capture.ts  helpers.ts  index.ts  nextFrame.ts  scan.ts  scanner-worker.ts  videoScanner.ts  workerDecode.ts
src/stream/: compatibility.d.ts  index.ts  media-track-shims.d.ts  shimGetUserMedia.ts  userMediaStream.ts  webrtc-adapter.d.ts
src/wasm/: zxing.d.ts  zxing_full.d.ts  zxing_reader.d.ts  zxing_writer.d.ts
src/writer/: index.ts  zxing_writer.d.ts  zxing_writer.js  zxing_writer.wasm
tests/: blackbox.test.ts  issue.test.ts  readBarcodes.bench.ts  reader.node.spec.ts  scan.browser.test.ts  testEntries.ts  unit.test.ts  useScanner.browser.test.tsx  utils.ts
(+6334 files in other folders)
